--- a/public/stylesheets/site/2.0/21-userstuff.css
+++ b/public/stylesheets/site/2.0/21-userstuff.css
@@ -59,5 +59,8 @@
 /* WORK MARGINS */
 #workskin {max-width:72em; margin:auto; font-size: 1.08em;}
 
+#workskin .module {
+  float: none;
+  }
 
 /*END== */
